Updated both Controllers