@@ -2,14 +2,13 @@ package com.easypg.service.admin;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.easypg.custom_exceptions.InvalidInputException;
-import com.easypg.custom_exceptions.ResourceNotFoundException;
 import com.easypg.dao.ComplaintDao;
-import com.easypg.dto.ApiResponse;
 import com.easypg.dto.ComplaintRespDTO;
 import com.easypg.dto.ComplaintStatsDTO;
 import com.easypg.dto.UpdateComplaintActionDTO;
@@ -19,208 +18,224 @@ import com.easypg.entities.Complaint;
 import com.easypg.enums.ComplaintStatus;
 import com.easypg.enums.PriorityLevel;
 
-import lombok.AllArgsConstructor;
-
 @Service
 @Transactional
-@AllArgsConstructor
 public class AdminComplaintServiceImpl implements AdminComplaintService {
-    
-    private final ComplaintDao complaintDao;
+
+    @Autowired
+    private ComplaintDao complaintDao;
 
     @Override
+    @Transactional(readOnly = true)
     public List<ComplaintRespDTO> getAllComplaints() {
-        return complaintDao.findAllWithTenantDetails()
-                .stream()
-                .map(this::mapToAdminComplaintRespDTO)
-                .toList();
+        System.out.println("Admin Service: getAllComplaints");
+        
+        List<Complaint> complaints = complaintDao.findAllActiveComplaintsOrderByCreatedAtDesc();
+        
+        return complaints.stream()
+                .map(this::mapToComplaintRespDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ComplaintRespDTO getComplaintDetails(Long complaintId) {
-        Complaint entity = complaintDao.findByIdWithTenantDetails(complaintId)
-                .orElseThrow(() -> new ResourceNotFoundException("Complaint not found with ID: " + complaintId));
+        System.out.println("Admin Service: getComplaintDetails - complaintId: " + complaintId);
         
-        return mapToAdminComplaintRespDTO(entity);
-    }
-
-    @Override
-    public ApiResponse updateComplaintStatus(Long complaintId, UpdateComplaintStatusDTO dto) {
-        Complaint complaint = complaintDao.findByIdAndIsDeletedFalse(complaintId)
-                .orElseThrow(() -> new ResourceNotFoundException("Complaint not found with ID: " + complaintId));
+        Complaint complaint = complaintDao.findById(complaintId)
+                .orElseThrow(() -> new RuntimeException("Complaint not found with id: " + complaintId));
         
-        ComplaintStatus oldStatus = complaint.getComplaintStatus();
-        complaint.setComplaintStatus(dto.getStatus());
-        
-        // Auto-set resolved date when status changes to RESOLVED
-        if (dto.getStatus() == ComplaintStatus.RESOLVED && oldStatus != ComplaintStatus.RESOLVED) {
-            complaint.setResolvedDate(LocalDateTime.now());
+        if (complaint.isDeleted()) {
+            throw new RuntimeException("Complaint not found");
         }
         
-        // Clear resolved date if status changes from RESOLVED
-        if (dto.getStatus() != ComplaintStatus.RESOLVED && oldStatus == ComplaintStatus.RESOLVED) {
+        return mapToComplaintRespDTO(complaint);
+    }
+
+    @Override
+    public ComplaintRespDTO updateComplaintStatus(Long complaintId, UpdateComplaintStatusDTO dto) {
+        System.out.println("Admin Service: updateComplaintStatus - complaintId: " + complaintId + 
+                          ", status: " + dto.getComplaintStatus());
+        
+        Complaint complaint = complaintDao.findById(complaintId)
+                .orElseThrow(() -> new RuntimeException("Complaint not found with id: " + complaintId));
+        
+        if (complaint.isDeleted()) {
+            throw new RuntimeException("Complaint not found");
+        }
+        
+        // Update status
+        complaint.setComplaintStatus(dto.getComplaintStatus());
+        complaint.setUpdatedBy("admin");
+        
+        // Set resolved date if status is RESOLVED
+        if (dto.getComplaintStatus() == ComplaintStatus.RESOLVED) {
+            complaint.setResolvedDate(LocalDateTime.now());
+        } else {
             complaint.setResolvedDate(null);
         }
         
-        return new ApiResponse("Complaint status updated to " + dto.getStatus() + " for ID: " + complaintId);
+        Complaint savedComplaint = complaintDao.save(complaint);
+        return mapToComplaintRespDTO(savedComplaint);
     }
 
     @Override
-    public ApiResponse updateComplaintAction(Long complaintId, UpdateComplaintActionDTO dto) {
-        Complaint complaint = complaintDao.findByIdAndIsDeletedFalse(complaintId)
-                .orElseThrow(() -> new ResourceNotFoundException("Complaint not found with ID: " + complaintId));
+    public ComplaintRespDTO updateComplaintPriority(Long complaintId, UpdateComplaintPriorityDTO dto) {
+        System.out.println("Admin Service: updateComplaintPriority - complaintId: " + complaintId + 
+                          ", priority: " + dto.getPriorityLevel());
         
+        Complaint complaint = complaintDao.findById(complaintId)
+                .orElseThrow(() -> new RuntimeException("Complaint not found with id: " + complaintId));
+        
+        if (complaint.isDeleted()) {
+            throw new RuntimeException("Complaint not found");
+        }
+        
+        // Update priority
+        complaint.setPriorityLevel(dto.getPriorityLevel());
+        complaint.setUpdatedBy("admin");
+        
+        Complaint savedComplaint = complaintDao.save(complaint);
+        return mapToComplaintRespDTO(savedComplaint);
+    }
+
+    @Override
+    public ComplaintRespDTO updateComplaintAction(Long complaintId, UpdateComplaintActionDTO dto) {
+        System.out.println("Admin Service: updateComplaintAction - complaintId: " + complaintId);
+        
+        Complaint complaint = complaintDao.findById(complaintId)
+                .orElseThrow(() -> new RuntimeException("Complaint not found with id: " + complaintId));
+        
+        if (complaint.isDeleted()) {
+            throw new RuntimeException("Complaint not found");
+        }
+        
+        // Update action taken and set status to IN_PROGRESS if it's PENDING
         complaint.setActionTaken(dto.getActionTaken());
+        complaint.setUpdatedBy("admin");
         
-        // Auto-update status to IN_PROGRESS when action is first added
         if (complaint.getComplaintStatus() == ComplaintStatus.PENDING) {
             complaint.setComplaintStatus(ComplaintStatus.IN_PROGRESS);
         }
         
-        return new ApiResponse("Action taken updated for complaint ID: " + complaintId);
+        Complaint savedComplaint = complaintDao.save(complaint);
+        return mapToComplaintRespDTO(savedComplaint);
     }
 
     @Override
-    public ApiResponse updateComplaintPriority(Long complaintId, UpdateComplaintPriorityDTO dto) {
-        Complaint complaint = complaintDao.findByIdAndIsDeletedFalse(complaintId)
-                .orElseThrow(() -> new ResourceNotFoundException("Complaint not found with ID: " + complaintId));
-        
-        PriorityLevel oldPriority = complaint.getPriorityLevel();
-        complaint.setPriorityLevel(dto.getPriorityLevel());
-        
-        return new ApiResponse("Complaint priority updated from " + oldPriority + 
-                              " to " + dto.getPriorityLevel() + " for ID: " + complaintId);
-    }
-
-    @Override
-    public ApiResponse deleteComplaint(Long complaintId) {
-        Complaint complaint = complaintDao.findByIdAndIsDeletedFalse(complaintId)
-                .orElseThrow(() -> new ResourceNotFoundException("Complaint not found with ID: " + complaintId));
-        
-        // Soft delete
-        complaint.setDeleted(true);
-        return new ApiResponse("Complaint deleted successfully with ID: " + complaintId);
-    }
-
-    @Override
+    @Transactional(readOnly = true)
     public List<ComplaintRespDTO> getComplaintsByStatus(String status) {
+        System.out.println("Admin Service: getComplaintsByStatus - status: " + status);
+        
         try {
             ComplaintStatus complaintStatus = ComplaintStatus.valueOf(status.toUpperCase());
-            return complaintDao.findByComplaintStatusAndIsDeletedFalseOrderByCreatedAtDesc(complaintStatus)
-                    .stream()
-                    .map(this::mapToAdminComplaintRespDTO)
-                    .toList();
+            List<Complaint> complaints = complaintDao.findByComplaintStatusAndIsDeletedFalseOrderByCreatedAtDesc(complaintStatus);
+            
+            return complaints.stream()
+                    .map(this::mapToComplaintRespDTO)
+                    .collect(Collectors.toList());
+                    
         } catch (IllegalArgumentException e) {
-            throw new InvalidInputException("Invalid complaint status: " + status + 
-                    ". Valid options: PENDING, IN_PROGRESS, RESOLVED");
+            throw new RuntimeException("Invalid status: " + status + ". Valid statuses are: PENDING, RESOLVED, IN_PROGRESS");
         }
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ComplaintRespDTO> getComplaintsByPriority(String priority) {
+        System.out.println("Admin Service: getComplaintsByPriority - priority: " + priority);
+        
         try {
             PriorityLevel priorityLevel = PriorityLevel.valueOf(priority.toUpperCase());
-            return complaintDao.findByPriorityLevelAndIsDeletedFalseOrderByCreatedAtDesc(priorityLevel)
-                    .stream()
-                    .map(this::mapToAdminComplaintRespDTO)
-                    .toList();
+            List<Complaint> complaints = complaintDao.findByPriorityLevelAndIsDeletedFalseOrderByCreatedAtDesc(priorityLevel);
+            
+            return complaints.stream()
+                    .map(this::mapToComplaintRespDTO)
+                    .collect(Collectors.toList());
+                    
         } catch (IllegalArgumentException e) {
-            throw new InvalidInputException("Invalid priority level: " + priority + 
-                    ". Valid options: HIGH, LOW, MODERATE, GENERAL, IMPORTANT, URGENT");
+            throw new RuntimeException("Invalid priority: " + priority + 
+                    ". Valid priorities are: HIGH, LOW, MODERATE, GENERAL, IMPORTANT, URGENT");
         }
     }
 
     @Override
-    public List<ComplaintRespDTO> getComplaintsByTenant(Long tenantId) {
-        return complaintDao.findByTenantIdAndIsDeletedFalseOrderByCreatedAtDesc(tenantId)
-                .stream()
-                .map(this::mapToAdminComplaintRespDTO)
-                .toList();
-    }
-
-    @Override
-    public List<ComplaintRespDTO> filterComplaints(String status, String priority) {
-        ComplaintStatus complaintStatus = null;
-        PriorityLevel priorityLevel = null;
-        
-        // Parse status if provided
-        if (status != null && !status.equalsIgnoreCase("all")) {
-            try {
-                complaintStatus = ComplaintStatus.valueOf(status.toUpperCase());
-            } catch (IllegalArgumentException e) {
-                throw new InvalidInputException("Invalid complaint status: " + status);
-            }
-        }
-        
-        // Parse priority if provided
-        if (priority != null && !priority.equalsIgnoreCase("all")) {
-            try {
-                priorityLevel = PriorityLevel.valueOf(priority.toUpperCase());
-            } catch (IllegalArgumentException e) {
-                throw new InvalidInputException("Invalid priority level: " + priority);
-            }
-        }
-        
-        return complaintDao.findComplaintsWithFilters(complaintStatus, priorityLevel)
-                .stream()
-                .map(this::mapToAdminComplaintRespDTO)
-                .toList();
-    }
-
-    @Override
+    @Transactional(readOnly = true)
     public ComplaintStatsDTO getComplaintStats() {
+        System.out.println("Admin Service: getComplaintStats");
+        
         ComplaintStatsDTO stats = new ComplaintStatsDTO();
         
-        // Status-wise counts
+        // Get total count
         stats.setTotalComplaints(complaintDao.countByIsDeletedFalse());
-        stats.setPendingComplaints(complaintDao.countByComplaintStatusAndIsDeletedFalse(ComplaintStatus.PENDING));
-        stats.setInProgressComplaints(complaintDao.countByComplaintStatusAndIsDeletedFalse(ComplaintStatus.IN_PROGRESS));
-        stats.setResolvedComplaints(complaintDao.countByComplaintStatusAndIsDeletedFalse(ComplaintStatus.RESOLVED));
         
-        // Priority-wise counts
-        stats.setHighPriorityComplaints(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.HIGH));
-        stats.setModeratePriorityComplaints(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.MODERATE));
-        stats.setLowPriorityComplaints(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.LOW));
-        stats.setUrgentPriorityComplaints(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.URGENT));
-        stats.setImportantPriorityComplaints(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.IMPORTANT));
-        stats.setGeneralPriorityComplaints(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.GENERAL));
+        // Get counts by status
+        stats.setPendingCount(complaintDao.countByComplaintStatusAndIsDeletedFalse(ComplaintStatus.PENDING));
+        stats.setInProgressCount(complaintDao.countByComplaintStatusAndIsDeletedFalse(ComplaintStatus.IN_PROGRESS));
+        stats.setResolvedCount(complaintDao.countByComplaintStatusAndIsDeletedFalse(ComplaintStatus.RESOLVED));
+        
+        // Get counts by priority
+        stats.setHighPriorityCount(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.HIGH));
+        stats.setUrgentPriorityCount(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.URGENT));
+        stats.setModeratePriorityCount(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.MODERATE));
+        stats.setLowPriorityCount(complaintDao.countByPriorityLevelAndIsDeletedFalse(PriorityLevel.LOW));
         
         return stats;
     }
 
     @Override
-    public ApiResponse bulkUpdateStatus(List<Long> complaintIds, String status) {
-        try {
-            ComplaintStatus newStatus = ComplaintStatus.valueOf(status.toUpperCase());
-            int updatedCount = 0;
-            
-            for (Long complaintId : complaintIds) {
-                try {
-                    Complaint complaint = complaintDao.findByIdAndIsDeletedFalse(complaintId)
-                            .orElseThrow(() -> new ResourceNotFoundException("Complaint not found: " + complaintId));
-                    
-                    complaint.setComplaintStatus(newStatus);
-                    if (newStatus == ComplaintStatus.RESOLVED) {
-                        complaint.setResolvedDate(LocalDateTime.now());
-                    }
-                    updatedCount++;
-                } catch (Exception e) {
-                    System.err.println("Failed to update complaint " + complaintId + ": " + e.getMessage());
-                }
-            }
-            
-            return new ApiResponse("Bulk status update completed. Updated " + updatedCount + 
-                                  " out of " + complaintIds.size() + " complaints to " + newStatus);
-        } catch (IllegalArgumentException e) {
-            throw new InvalidInputException("Invalid status: " + status);
-        }
-    }
-    
-    // Helper method to map entity to Admin-specific DTO (includes full tenant details)
-    private ComplaintRespDTO mapToAdminComplaintRespDTO(Complaint complaint) {
-        ComplaintRespDTO dto = new ComplaintRespDTO();
+    @Transactional(readOnly = true)
+    public List<ComplaintRespDTO> filterComplaints(String status, String priority) {
+        System.out.println("Admin Service: filterComplaints - status: " + status + ", priority: " + priority);
         
-        // Map complaint fields
+        List<Complaint> complaints;
+        
+        if (status != null && priority != null) {
+            // Filter by both status and priority
+            ComplaintStatus complaintStatus = ComplaintStatus.valueOf(status.toUpperCase());
+            PriorityLevel priorityLevel = PriorityLevel.valueOf(priority.toUpperCase());
+            complaints = complaintDao.findByComplaintStatusAndPriorityLevelAndIsDeletedFalseOrderByCreatedAtDesc(
+                    complaintStatus, priorityLevel);
+        } else if (status != null) {
+            // Filter by status only
+            ComplaintStatus complaintStatus = ComplaintStatus.valueOf(status.toUpperCase());
+            complaints = complaintDao.findByComplaintStatusAndIsDeletedFalseOrderByCreatedAtDesc(complaintStatus);
+        } else if (priority != null) {
+            // Filter by priority only
+            PriorityLevel priorityLevel = PriorityLevel.valueOf(priority.toUpperCase());
+            complaints = complaintDao.findByPriorityLevelAndIsDeletedFalseOrderByCreatedAtDesc(priorityLevel);
+        } else {
+            // No filters, return all
+            complaints = complaintDao.findAllActiveComplaintsOrderByCreatedAtDesc();
+        }
+        
+        return complaints.stream()
+                .map(this::mapToComplaintRespDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public void deleteComplaint(Long complaintId) {
+        System.out.println("Admin Service: deleteComplaint - complaintId: " + complaintId);
+        
+        Complaint complaint = complaintDao.findById(complaintId)
+                .orElseThrow(() -> new RuntimeException("Complaint not found with id: " + complaintId));
+        
+        if (complaint.isDeleted()) {
+            throw new RuntimeException("Complaint already deleted");
+        }
+        
+        // Soft delete
+        complaint.setDeleted(true);
+        complaint.setUpdatedBy("admin");
+        complaintDao.save(complaint);
+        
+        System.out.println("Complaint with ID " + complaintId + " deleted successfully by admin");
+    }
+
+    // Helper method to convert Complaint entity to ComplaintRespDTO
+    private ComplaintRespDTO mapToComplaintRespDTO(Complaint complaint) {
+        ComplaintRespDTO dto = new ComplaintRespDTO();
         dto.setId(complaint.getId());
         dto.setTitle(complaint.getTitle());
         dto.setIssue(complaint.getIssue());
@@ -231,15 +246,17 @@ public class AdminComplaintServiceImpl implements AdminComplaintService {
         dto.setCreatedAt(complaint.getCreatedAt());
         dto.setUpdatedAt(complaint.getUpdatedAt());
         
-        // Map full tenant details (Admin can see all tenant info)
+        // Map tenant information
         if (complaint.getTenant() != null) {
             dto.setTenantId(complaint.getTenant().getId());
+            // Add tenant name  if available in Tenant entity
             if (complaint.getTenant().getUser() != null) {
                 dto.setTenantName(complaint.getTenant().getUser().getUsername());
-                dto.setTenantEmail(complaint.getTenant().getUser().getEmail());
             }
+            // dto.setTenantEmail(complaint.getTenant().getEmail());
             dto.setTenantContactNumber(complaint.getTenant().getContactNumber());
-            dto.setTenantGender(complaint.getTenant().getGender());
+            dto.setTenantGender(complaint.getTenant().getGender() != null ? 
+                complaint.getTenant().getGender().toString() : null);
         }
         
         return dto;
